Icomoon font dependency erased and a few design dtails added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img class="logointro" src="images/veryverydesign.png" alt="Logotipo de Very Very Designs"/>
                         <p>Diseño e Interiorismo</p>
 					</div>
-					<span class="bl-icon bl-icon-close">X</span>
+					<span class="bl-icon bl-icon-close"></span>
 				</section>
                 
                 
@@ -56,7 +56,7 @@
 /////////////////////////////////////////////////////////////////////-->             
 				<section class="section-two">
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-lightbulb"><span class="subtext">mis</span> HABILIDADES</h2>
+						<h2><span class="subtext">mis</span> HABILIDADES</h2>
 					</div>
 					<div class="bl-content">
 						<h2>Servicios</h2>
@@ -80,7 +80,7 @@
 /////////////////////////////////////////////////////////////////////-->                
 				<section id="bl-work-section section-three">
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-portfolio"><span class="subtext">algunos de mis</span> PROYECTOS</h2>
+						<h2><span class="subtext">algunos de mis</span> PROYECTOS</h2>
 					</div>
 					<div class="bl-content turquesa">
 						<h2>Portafolio de Proyectos</h2>
@@ -107,7 +107,7 @@
 /////////////////////////////////////////////////////////////////////-->                
 				<section class="section-four">
 					<div class="bl-box">
-                        <h2 class="bl-icon bl-icon-envelope2"><span class="subtext">EN</span> CONTACTO</h2>
+                        <h2><span class="subtext">EN</span> CONTACTO</h2>
 					</div>
 					<div class="bl-content turquesa">
 						<h2>En Contacto</h2>
